--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1525,107 +1525,107 @@ stories:
   domain: http://www.thenewsherald.com/
   link: http://www.thenewsherald.com/online_features/senior_living/coping-with-the-challenges-of-mental-illness-during-the-holidays/image_99ee53e7-51f1-5294-abee-962b9a4e9ac9.html
 images:
-- name: death-valley-death-valley-national-park-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-clean-view.jpg
-- name: store-on-corner-store-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-bright-sand.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-spagetti-accident.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-spagetti-accident.JPG
-- name: old-door-lock-old-door-lock-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-gan-vogh.jpg
-- name: birdhouse-birdhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-dali.jpg
-- name: nazi-invasion-nyc-subway-train-125th.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-nyc-subway-train-125th.jpg
-- name: la-muse-colonial-solider-pointing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-colonial-solider-pointing.jpg
-- name: christianity-christianity-under-construction-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-satan-red.jpg
-- name: christianity-christianity-under-construction-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-china-prop.jpg
-- name: statue-of-liberty-front-view-statueofliberty-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-light-dali.jpg
-- name: death-valley-death-valley-national-park-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-emily-carr.jpg
-- name: bf-skinner-old-house_36681740046_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-house_36681740046_o.jpg
-- name: downtheline-downtheline-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-pond.jpg
-- name: razorcliff-razorcliff-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sunday.jpg
-- name: sand-hand-sand-hand-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-purp-paper.jpg
-- name: copper-circuit-butterfly-purple-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-butterfly-purple-flower.jpg
-- name: old-school-house-old-schoolhouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purple-pond.jpg
-- name: abe-lincoln-one-spagetti-accident-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-spagetti-accident-file-00-00-07-91.jpg
-- name: beach-clouds-lifeguard-beachclouds-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-aqua.jpg
-- name: oldsmallboat-oldsmallboat-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-gan-vogh.jpg
-- name: subway-subway-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-spagetti-accident.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
-- name: downtheline-downtheline-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gan-vogh.jpg
-- name: beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
-- name: containership-containership-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-plentiful.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-4.jpg
-- name: art-museum-art-museum-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-green-zuma.jpg
-- name: old-door-lock-old-door-lock-2-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-soul.jpg
-- name: mosaic-face-mosaic-face-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-pond.jpg
+- name: amusement-park-amusement-park-2-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-ww2-color.jpg
+- name: legal-statue-legalstatue-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-purple-pond.jpg
+- name: ellis-island-ellis-island-room-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-blocks.jpg
+- name: bluelake-colorful-blocks-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-00-00-00.jpg
+- name: legal-statue-legalstatue-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-purple-storm.jpg
+- name: legal-statue-legalstatue-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-neo-instinct.jpg
+- name: christianity-christianity-under-construction-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-constitution.jpg
+- name: stories-window-mountain-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-window-mountain-clean-view.jpg
+- name: server-cloud-server-racks-door-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-marcel-duchamp.jpg
 - name: braceros-domingo-ulloa-electric-tower-sun-behind.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-electric-tower-sun-behind.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-propaganda-leaflets.jpg
-- name: mediterranean-mediterranean-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-pond.jpg
-- name: cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
-- name: liberty-back-statue-liberty-back-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-atari-missle.jpg
-- name: downtheline-downtheline-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-rain.jpg
-- name: aws-s3-stories-window-mountain-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-window-mountain-dark-dali.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
-- name: aws-s3-stories-carryload-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-dali-three.jpg
-- name: hollywood-building-hollywood-building-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gan-vogh.jpg
-- name: ellis-island-ellis-island-room-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-atari-asteroids.jpg
-- name: udnie-DSC_0079.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0079.jpg
-- name: old-house-oldhouse-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-green-zuma.jpg
-- name: old-cabin-oldcabin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dark-soul.jpg
-- name: crow_dark_rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_rain.jpg
-- name: white-house-lawn-white-house-window-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-cinnamon-rolls.jpg
-- name: white-house-lawn-white-house-window-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-green-zuma.jpg
-- name: powerlines-power-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-nazi-poster.jpg
-- name: gypsy-wagon-gypsywagon-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-diego-rivera1.jpg
-- name: nazi-invasion-white-house-close-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-close-up.jpg
-- name: paris-paris-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crabapple.jpg
-- name: old-door-lock-old-door-lock-2-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-rainbow-festival.jpg
+- name: udnie-IMG_8355.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8355.jpg
+- name: aws-s3-stories-new-76-135-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-76-135-800-500-0-max-0-1--1.jpg
+- name: old-house-oldhouse-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-satan-red.jpg
+- name: copper-circuit-colonial-solider-pointing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-colonial-solider-pointing.jpg
+- name: oldsmallboat-oldsmallboat-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-alberto-giacometti.jpg
+- name: copper-circuit-crypto-wheels-old-compute-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-crypto-wheels-old-compute-bletchley.jpg
+- name: oldcabin-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gred-mash.jpg
+- name: stories-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-dark-dali.jpg
+- name: adam-smith-adam-smith-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-gred-mash.jpg
+- name: old-cabin-oldcabin-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-electricity.jpg
+- name: bf-skinner-colonial-solider-pointing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-colonial-solider-pointing.jpg
+- name: nazi-invasion-chess-in-the-park-with-pigeons.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-chess-in-the-park-with-pigeons.jpg
+- name: white-house-lawn-white-house-lawn-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-granite.jpg
+- name: braceros-domingo-ulloa-san-francisco-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-san-francisco-skyline.jpg
+- name: christianity-christianity-under-construction-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smoking-cigarette.jpg
+- name: cargo-ship-cargo-ship-on-sea-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-nazi-poster.jpg
+- name: copper-circuit-IMG_6200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_6200.jpg
+- name: rockingchair-face-2-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crabapple.jpg
+- name: power-lines-power-lines-empty-space-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-clean-view.jpg
+- name: oldcabin-oldcabin-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-circuit.jpg
+- name: cyber-api-description-wars-16402907-10154968484409813-8950624317719273541-o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-16402907-10154968484409813-8950624317719273541-o.jpg
+- name: ellis-island-ellisisland-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-electricity.jpg
+- name: scream-DSC_0089.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0089.jpg
+- name: paris-paris-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-smoking-cigarette.jpg
+- name: bf-skinner-old-ship-waterfront-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-ship-waterfront-harbor.jpg
+- name: machine-road-machine-road-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-marcel-duchamp.jpg
+- name: copper-circuit-people-walking-down-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-people-walking-down-street.jpg
+- name: stalin-time-blechlety-old-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-blechlety-old-racks.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-bright-sand.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-bright-sand.png
+- name: gypsymosaic-gypsy-eyes-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-far-away.jpg
+- name: la-muse-capital_36728421355_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-capital_36728421355_o.jpg
+- name: castle-wall-DSC-0067-alien-goggles.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-alien-goggles.JPG
+- name: locked-up-steam-lock-up-steam-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-post-modern.jpg
+- name: oldcabin-store-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dark-dali.jpg
+- name: mediterranean-mediterranean-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-post-modern.jpg
+- name: la-muse-concert-hall-bright-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-concert-hall-bright-lights.jpg
+- name: nazi-invasion-adam-smith-edinburgh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-adam-smith-edinburgh.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
+- name: white-house-lawn-white-house-window-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-neo-instinct.jpg
+- name: old-granary-field-oldhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-granite.jpg
+- name: yuma-bank-yuma-bak-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-aqua.jpg
 ---
 Dobbins On The Run.&nbsp;Kelan Martin Is The Timberwolves Iron Man.&nbsp;Zabiegi Na Cellulit Wojkowice.&nbsp;County Closing Five Voting Precincts.&nbsp;Key Lawsuit Dismissed By Judge Over Congressional Subpoena.&nbsp;Body Found At Grosse Ile Marina Confirmed To Be Missing Wyandotte Man.&nbsp;Peach Bowl Tennessee Indiana.&nbsp;Marcus Smart Relieved To Be Freed From Seclusion.&nbsp;
